greeterdatadir = $(datadir)/lightdm-another-gtk-greeter
dist_greeterdata_DATA = greeter.ui greeter.classic.ui greeter.css

xgreetersdir = $(datadir)/xgreeters
dist_xgreeters_DATA = lightdm-another-gtk-greeter.desktop

configdir = $(sysconfdir)/lightdm
dist_config_DATA = lightdm-another-gtk-greeter.conf
